--- a/ezugi_staging_backend_framework_automation/pom.xml
+++ b/ezugi_staging_backend_framework_automation/pom.xml
@@ -69,6 +69,13 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+		</dependency>
+
 
 	</dependencies>
 
